--- a/packages/react-notion-x/styles.css
+++ b/packages/react-notion-x/styles.css
@@ -1156,7 +1156,7 @@ svg.notion-page-icon {
   cursor: pointer;
   padding: 6px 8px;
   border: 0 none;
-  border-radius: 3px;
+  border-radius: 10px;
   transition: background 120ms ease-in 0s;
   background: transparent;
 }
@@ -1484,8 +1484,8 @@ svg.notion-page-icon {
   pointer-events: none;
   overflow: hidden;
   background-color: #1f2027;
-  background: url('/api/social-image?id=');
-  background-size: cover;
+  background-size: contain;
+  background-position:top;
   background-repeat: no-repeat;
   padding: 8px 8px 0;
 }
@@ -1987,8 +1987,11 @@ svg.notion-page-icon {
 }
 
 .notion-page-title .notion-page-icon-inline {
-  margin-left: 2px;
-  margin-right: 6px;
+  position: relative;
+  top: 4px;
+  transform: scale(0.7);
+  margin: 0;
+  opacity: .4;
 }
 
 .notion-collection-card-property .notion-link {
@@ -2019,13 +2022,18 @@ svg.notion-page-icon {
 
 .notion-page-title-text {
   position: relative;
-  top: 1px;
+  top: 5px;
   border-bottom: 1px solid var(--fg-color-1);
   line-height: 1.3;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-weight: 500;
+}
+
+.notion-link .notion-page-title {
+  position: relative;
+  top: -2px;
 }
 
 /* removes double underline with links */
@@ -2792,7 +2800,21 @@ svg.notion-page-icon {
   animation-name: slideDownAndFade;
 }
 
-/* 일부 글 목록 페이지에서 width가 모바일에서 overflow되는 issue 수정 */
+.notion-list-item {
+  border-radius: 10px;
+  padding: 15px 0;
+  transition: all 0.2s ease;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
+.notion-list-item:active {
+  transform: scale(0.99);
+}
+
+/* FIX: 일부 글 목록 페이지에서 width가 모바일에서 overflow되는 issue */
 .notion-block-1a346171ed574b0a9c1c3f5a29b39919,
 .notion-block-adcf3fd700f645c4b7b5f8be7bfc1f4e,
 .notion-block-e00ae9de7c8f4667a0327adf0d09d9a0,
@@ -2802,4 +2824,21 @@ svg.notion-page-icon {
 .notion-block-ea48627b0bf44a8f95cf8eec9aa0ce0f
  {
   width: 100% !important;
+}
+
+
+/* Forest */
+.notion-block-515f927b635b4ef18d7988609314de2a .notion-page-icon-hero.notion-page-icon-image {
+  box-shadow: none !important;
+}
+.notion-block-515f927b635b4ef18d7988609314de2a .notion-page-icon-hero.notion-page-icon-image .notion-page-icon {
+  border-radius:0 !important;
+}
+
+.notion-block-ff85c8c8bc3345babf2f7970d86506d4 .notion-list-body {
+  border-top: 1px solid var(--notion-item-gray);
+}
+
+.notion-block-ff85c8c8bc3345babf2f7970d86506d4 .notion-list-item-body {
+  display:none;
 }
